--- a/PCInfoParser-DB-Viewer-NET/PCInfoParser-DB-Viewer-NET.csproj
+++ b/PCInfoParser-DB-Viewer-NET/PCInfoParser-DB-Viewer-NET.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="PCInfoParser-DB-Viewer-NET_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
@@ -149,7 +150,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="EPPlus">
-      <Version>6.2.2</Version>
+      <Version>6.2.4</Version>
     </PackageReference>
     <PackageReference Include="IndexRange">
       <Version>1.0.2</Version>
@@ -158,8 +159,14 @@
       <Version>8.0.33</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Packaging">
-      <Version>4.0.0</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="diskette2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="diskette.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
